--- a/src/main/resources/templates/customer/customerform.html
+++ b/src/main/resources/templates/customer/customerform.html
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-2 control-label">Phone NUmber:</label>
+                <label class="col-sm-2 control-label">Phone Number:</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" th:field="*{phoneNumber}"/>
                 </div>
