Added moar stuff.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,6 +21,7 @@
         <ul>
             <li><a href="#" th:href="@{'/product/list'}">products</a></li>
             <li><a href="#" th:href="@{'/customer/list'}">customers</a></li>
+            <li><a href="#" th:href="@{'/user/list'}">users</a></li>
         </ul>
     </table>
 </div>
